--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
 <!--     <h1>How to disable downloading of the PDF document</h1> -->
-    <iframe src="https://lee-jhwn.github.io/files/CV_jihwan.pdf#toolbar=0" width="100%">
+    <iframe src="https://lee-jhwn.github.io/files/CV_Jihwan.pdf#toolbar=0" width="100%">
     </iframe>
   </body>
 </html>
